--- a/signup.html
+++ b/signup.html
@@ -50,7 +50,7 @@
   <body class="text-center">
     
 <main class="form-signin">
-  <form action="/" method="POST">
+  <form action="/signup" method="POST">
     <img class="mb-4" src="/img/my_icon.jpeg" alt="" width="80" height="70">
     <h1 class="h3 mb-3 fw-normal">Please signup to My NewsLetter</h1>
 
